--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/stack": "^5.4.1",
     "axios": "^0.19.2",
     "expo": "^37.0.12",
     "react": "~16.9.0",
@@ -18,6 +20,7 @@
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.7.0",
     "react-native-router-flux": "^4.2.0",
+    "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
     "yarn": "^1.22.4"
